--- a/composer.json
+++ b/composer.json
@@ -84,6 +84,6 @@
             "php-http/discovery": true
         }
     },
-    "minimum-stability": "beta",
+    "minimum-stability": "stable",
     "prefer-stable": true
 }
