--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -17,7 +17,8 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        php: [8.3, 8.4]
+        os: [ ubuntu-latest, macos-latest, windows-latest ]
+        php: [ 8.3, 8.4 ]
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
